--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
+    "firebase": "^9.23.0",
     "next": "14.0.4",
     "postcss": "8.4.32",
     "react": "18.2.0",
