--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
+    "encoding": "^0.1.13",
     "firebase": "^9.23.0",
     "next": "13.4.7",
     "postcss": "8.4.32",
