--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "autoprefixer": "10.4.16",
     "encoding": "^0.1.13",
     "firebase": "^9.23.0",
+    "neo4j-driver": "^5.17.0",
+    "neovis.js": "^2.1.0",
     "next": "13.4.7",
     "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-crop": "^11.0.5",
     "tailwindcss": "3.4.0"
   },
   "devDependencies": {
